# wheeledit

./: README.md  pyproject.toml
wheeledit/: __main__.py  cli.py  editor.py
